--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -21,8 +21,6 @@ jobs:
         shell: powershell
         env:
           DB_SERVER: ${{ secrets.DB_SERVER }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           Write-Host "Checking and creating SSIS Catalog..."
           $createCatalogSql = @"
@@ -35,7 +33,7 @@ jobs:
           "@
           $sqlFile = ".\create_ssisdb.sql"
           $createCatalogSql | Out-File -FilePath $sqlFile -Encoding UTF8
-          $cmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -i `"$sqlFile`" -o .\ssisdb_create.log"
+          $cmd = "sqlcmd -S `"$env:DB_SERVER`" -E -i `"$sqlFile`" -o .\ssisdb_create.log" # Using Integrated Auth
           Invoke-Expression $cmd
           if ($LASTEXITCODE -ne 0) {
             Write-Error "Failed to create SSIS Catalog. Check ssisdb_create.log"
@@ -70,7 +68,7 @@ jobs:
             exit 1
           }
 
-          # Test SQL Server connectivity (optional, using Integrated Auth)
+          # Test SQL Server connectivity
           Write-Host "Testing Integrated Authentication connectivity..."
           try {
             $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT @@VERSION`" -o $connectLog"
@@ -135,7 +133,7 @@ jobs:
           # Verify deployment
           Write-Host "Verifying deployment in catalog..."
           $verifySql = "SELECT * FROM SSISDB.catalog.projects WHERE folder_name = 'TimesheetDeployedPackages' AND name = 'ProjectPackages'"
-          $verifyCmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"$verifySql`" -o .\deployment_verify.log"  # Using -E for Integrated Auth
+          $verifyCmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"$verifySql`" -o .\deployment_verify.log"
           Invoke-Expression $verifyCmd
           if ($LASTEXITCODE -eq 0) {
             Write-Host "Deployment verification succeeded. Check deployment_verify.log"
@@ -169,13 +167,17 @@ jobs:
           foreach ($pkg in $packages.Trim().Split("`n") | Where-Object { $_ }) {
             $name = $pkg.Trim()
             $sqlFile = Join-Path $outdir "$name.sql"
-            $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER
+            $content = (Get-Content -Raw $template) `
+              -replace '{jobName}', $name `
+              -replace '{dbUser}', 'NT Service\SQLAgent$MSSQLSERVER04' `
+              -replace '{dbServer}', "$env:DB_SERVER"
             $content | Out-File -Encoding utf8 -NoNewline $sqlFile
-            Write-Host "Deploying job: $name"
-            $cmd = "sqlcmd -S `"$env:DB_SERVER`" -E -i `"$sqlFile`""
+            Write-Host "Deploying job: $name on server: $env:DB_SERVER"
+            $cmd = "sqlcmd -S `"$env:DB_SERVER`" -E -i `"$sqlFile`" -o `"$outdir\$name.log`""
             Invoke-Expression $cmd
             if ($LASTEXITCODE -ne 0) {
-              Write-Error "Failed to deploy job: $name"
+              Write-Error "Failed to deploy job: $name. Check $outdir\$name.log for details"
+              Get-Content "$outdir\$name.log" | Write-Error
               exit 1
             }
           }
